# hspec-discover-performance-issue

./: issue.cabal
test/: FooSpec.hs  Spec.hs
