cabal-version: 3.16

name:           issue
version:        0.0.0
build-type:     Simple

test-suite spec
  -- ghc-options: -fignore-interface-pragmas
  build-depends:
      base ==4.*
    , hspec ==2.*
  hs-source-dirs: test
  main-is: Spec.hs
  other-modules: FooSpec
  default-language: Haskell2010
